# technical_analysis

./: .gitignore  README.md
code_blocks/check-lrma/: check-lrma.cbp  main.cpp
code_blocks/check-rshillma/: check-rshillma.cbp  main.cpp
code_blocks/check-td/: check-td.cbp
code_blocks/check_bb/: check_bb.cbp  main.cpp
code_blocks/check_crsi/: check_crsi.cbp
code_blocks/check_delay_line/: check_delay_line.cbp  main.cpp
code_blocks/check_fft/: check_fft.cbp  main.cpp
code_blocks/check_indicators/: check_indicators.cbp  main.cpp
code_blocks/check_maz/: check_maz.cbp  main.cpp
code_blocks/check_min_max/: check_min_max.cbp  main.cpp
code_blocks/check_min_max_difference/: check_min_max_difference.cbp  main.cpp
code_blocks/check_pri/: check_pri.cbp  main.cpp
code_blocks/check_sma/: check_sma.cbp  main.cpp
code_blocks/check_stochastics/: check_stochastics.cbp  main.cpp
code_blocks/check_sum/: check_sum.cbp  main.cpp
code_blocks/check_zscore/: check_zscore.cbp  main.cpp
code_blocks/checking_circular_buffer/: checking_circular_buffer.cbp
code_blocks/checking_delay_measurement/: checking_delay_measurement.cbp  main.cpp
code_blocks/checking_least_square_method/: checking_least_square_method.cbp
code_blocks/checking_normalization/: checking_normalization.cbp  main.cpp
code_blocks/checking_statistical_indicators/: checking_statistical_indicators.cbp  main.cpp
code_blocks/checking_statistics/: checking_statistics.cbp
code_blocks/cmp_min_max_witch_streaming_min_max/: cmp_min_max_witch_streaming_min_max.cbp  main.cpp
code_blocks/test/: atr.cpp  body_filter.cpp  cluster_shaper.cpp  ssa.cpp  test.cbp
include/: xtechnical_common.hpp  xtechnical_delay_meter.hpp  xtechnical_streaming_min_max.hpp
include/backtest/: xtechnical_winrate_statistics.hpp
include/indicators/: ssa.hpp  xtechnical_atr.hpp  xtechnical_awesome_oscillator.hpp  xtechnical_body_filter.hpp  xtechnical_cci.hpp  xtechnical_cluster_shaper.hpp  xtechnical_delay_line.hpp  xtechnical_fast_min_max.hpp  xtechnical_fisher.hpp  xtechnical_fractals.hpp  xtechnical_fractals_level.hpp  xtechnical_period_stats.hpp  xtechnical_rsi.hpp  xtechnical_sma.hpp  xtechnical_super_trend.hpp  xtechnical_true_range.hpp
include/math/: xtechnical_ordinary_least_squares.hpp
pandas_ta_hands_on/: example_momentum.py  example_yfinance.py
pandas_ta_hands_on/tests/: example_momentum.py
tests/: super_trend.cpp
tests/check_delay_line/: check_delay_line.cpp
tests/check_fft/: check_fft.cpp
tests/check_sma/: check_sma.cpp
tests/check_stochastics/: check_stochastics.cpp
tests/checking_statistics/: checking_statistics.cpp
tests/cmp_min_max_witch_streaming_min_max/: cmp_min_max_witch_streaming_min_max.cpp
xtech/: .gitmodules  CMakeLists.txt  LICENSE
xtech/include/: xtechnical_correlation.hpp  xtechnical_dft.hpp  xtechnical_indicators.hpp  xtechnical_moving_window.hpp  xtechnical_normalization.hpp  xtechnical_regression_analysis.hpp  xtechnical_statistics.hpp
xtech/include/math/: xtechnical_compare.hpp  xtechnical_smoothing.hpp
xtech/tests/: cci.cpp  fractals.cpp  period_stats.cpp  trend_direction_force_index.cpp
xtech/tests/check-td/: check-td.cpp
xtech/tests/check_crsi/: check_crsi.cpp
xtech/tests/check_maz/: check_maz.cpp
xtech/tests/check_min_max/: check_min_max.cpp
xtech/tests/checking_circular_buffer/: checking_circular_buffer.cpp
xtech/tests/checking_delay_measurement/: checking_delay_measurement.cpp
xtech/tests/checking_least_square_method/: checking_least_square_method.cpp
xtech/tests/checking_normalization/: checking_normalization.cpp
xtech_cpp/: .clang-format  README.md
xtech_cpp/include/: xtechnical_circular_buffer.hpp
xtech_cpp/include/indicators/: xtechnical_crsi.hpp
xtech_cpp/tests/check-lrma/: check-lrma.cpp
xtech_cpp/tests/check-rshillma/: check-rshillma.cpp
xtech_cpp/tests/check_bb/: check_bb.cpp
xtech_cpp/tests/check_indicators/: check_indicators.cpp
xtech_cpp/tests/check_min_max_difference/: check_min_max_difference.cpp
xtech_cpp/tests/check_pri/: check_pri.cpp
xtech_cpp/tests/check_sum/: check_sum.cpp
xtech_cpp/tests/checking_statistical_indicators/: checking_statistical_indicators.cpp
